# testWithoutHasEOLC

./: LICENSE  stack.yaml  withoutHasEOLC.cabal
app/: Main.hs
