name:                withoutHasEOLC
version:             0.1.0
description:         Example code for essence-of-live-coding-gi-gtk
homepage:            https://github.com/miguel-negrao
license:             BSD3
license-file:        LICENSE
author:              Miguel Negrão
maintainer:          miguel.negrao@friendlyvirus.org
category:            FRP, Live codingm Bindings
build-type:          Simple
cabal-version:       >=1.10

executable test
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , essence-of-live-coding >= 0.2.6
                     , essence-of-live-coding-vivid
                     , essence-of-live-coding-PortMidi
                     , transformers
                     , transformers-base
                     , world-peace
                     , vivid
                     , PortMidi
  ghc-options:      -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-orphans 

source-repository head
  type:     git
  location: https://github.com/miguel-negrao/essence-of-live-coding-gi-gtk
